--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RO ToolHub - 仙境傳說工具箱</title>
+    <title>RO Tool</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
